<resources>
    <string name="app_name">PocketParliament</string>
    <string name="app_name_short">PocketParl</string>

    <string name="search_hint">Search MPs, Bills, Committees</string>


    <string name="com.twitter.sdk.android.CONSUMER_KEY">O8CxZsCPK7v6iIeUng9k6lwPn </string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">7O1VaCQerpOPjwYsj6SrCcF4oCaXxmlmTnmns0KudXVY878Laa</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connection_message">No Connection</string>
    <string name="email">Email</string>
    <string name="call">Call</string>
    <string name="website">Website</string>
    <string name="parl_site">PARL Site</string>
    <string name="recent_tweets">Recent Tweets</string>

    <string name="MPs">MPs</string>
    <string name="Bills">Bills</string>
    <string name="Sponsor">Sponsor</string>

    <string name="following_mps">Following MPs</string>
    <string name="following_bills">Following Bills</string>

    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="NotifSettings">Notification Settings</string>
    <string name="Refresh">Refresh</string>

    <string name="visit_legisinfo"><u>Visit LEGISINFO page</u></string>

    <string name="news_notification_chanel">tech.susheelkona.pocketparliament.NEWS</string>

    <string name="no_content_str">No content here</string>


    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel imperdiet est. Sed cursus suscipit placerat. Nunc ornare felis at molestie pulvinar. Nam sagittis sollicitudin dignissim. Suspendisse in commodo est. Phasellus et elit quis lorem sollicitudin pretium id non leo. Donec nec venenatis sapien, sit amet elementum sem. Cras nec magna est. Nam ultricies tellus erat, vitae porta purus luctus eu. Maecenas mauris nisi, condimentum quis lectus quis, imperdiet volutpat lacus. Vestibulum interdum elementum egestas. Sed pretium, eros at hendrerit ultricies, tortor turpis facilisis ligula, scelerisque vulputate sem neque eget nibh. Donec a vestibulum mauris, et vehicula nisl.
        Etiam eu ligula tincidunt, maximus metus sed, tempus quam. Morbi interdum, diam vitae blandit placerat, lacus mi sagittis quam, a imperdiet quam erat et dolor. Proin suscipit eros eget mi hendrerit dictum. Donec ex libero, fermentum non mattis elementum, tincidunt ut diam. Integer convallis velit nunc, nec commodo augue vulputate nec. Pellentesque volutpat libero nulla, ac ullamcorper urna volutpat sit amet. Praesent mollis odio vel sapien ultricies interdum sed sed urna. Sed at risus nec mauris feugiat viverra feugiat id ipsum. In pellentesque accumsan elementum.
        Ut aliquet finibus lorem a imperdiet. Nulla nulla nulla, tempor eu tempus id, vestibulum a sapien. Sed mauris tortor, commodo sed metus quis, ornare finibus dolor. Proin eleifend vestibulum sodales. Donec facilisis id purus quis posuere. Aenean pellentesque justo sit amet venenatis pulvinar. Morbi ac eros vitae tellus semper interdum vitae et elit.
        Pellentesque at ultricies dui. Vivamus nec elit vestibulum, rutrum diam mattis, fringilla erat. Proin bibendum sodales lacus et eleifend. Fusce et viverra est. Sed at nisi metus. Quisque pulvinar, erat sed bibendum volutpat, turpis orci laoreet magna, ut ultricies ligula neque id ligula. Donec convallis mollis consectetur. Sed turpis nibh, convallis eu diam id, luctus sodales augue. Maecenas vel turpis augue.
        Sed in semper mauris. Ut eget sapien luctus, eleifend elit eget, feugiat lectus. Morbi pretium ex sed posuere rhoncus. Sed laoreet id libero id imperdiet. Phasellus nunc erat, efficitur in enim id, fringilla posuere tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce suscipit ullamcorper mi sed ultricies. Integer in iaculis dolor. Nunc sit amet odio sed dui ornare sollicitudin. Morbi et auctor libero, ut mollis dolor. Donec neque arcu, tristique sed porttitor sed, pellentesque et arcu. Donec scelerisque rutrum libero commodo vulputate.</string>
</resources>
