<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.bills.BillOverviewFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="75dp"/>
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/GenericCard"
                android:layout_margin="0dp"
                app:cardElevation="150dp">
                <TextView
                    android:id="@+id/bill_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/hello_blank_fragment"
                    android:textStyle="bold"
                    android:textSize="15dp"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sponsor"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/GenericCard"
                app:contentPadding="0dp">
                <FrameLayout
                    android:id="@+id/sponsor_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </FrameLayout>

                <RelativeLayout
                    android:id="@+id/senator_sponsor_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/person_img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/people"/>

                    <TextView
                        android:id="@+id/senator_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/person_img"
                        android:text="@string/Sponsor"
                        android:paddingLeft="20dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/senate"
                        android:textStyle="bold"
                        android:textSize="16dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/GenericCard"
                app:contentPadding="0dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/legisinfo_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textAllCaps="false"
                    android:background="@drawable/ripple_bg"
                    android:gravity="center"
                    android:text="@string/visit_legisinfo"
                    android:textStyle="bold"
                    android:textColor="@color/link" />
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>



    <!-- TODO: Update blank fragment layout -->

</LinearLayout>